# fast.middleware

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: API.md
docs/middlewares/: ab-testing.md  accept-language.md  api-version-header.md  audit.md  bandwidth.md  basic-auth.md  bearer-auth.md  bot-detection.md  bulkhead.md  chaos.md  circuit-breaker.md  client-hints.md  conditional-request.md  content-negotiation.md  content-type.md  context.md  correlation.md  cost-tracking.md  csp-report.md  csrf.md  data-masking.md  deprecation.md  early-hints.md  etag.md  exception-handler.md  feature-flag.md  geoip.md  graceful-shutdown.md  hateoas.md  header-transform.md  honeypot.md  https-redirect.md  ip-filter.md  json-schema.md  load-shedding.md  locale.md  method-override.md  metrics.md  no-cache.md  origin.md  (+39 more)
examples/: basic_usage.py  custom_middleware.py  full_stack.py
src/: __init__.py  ab_testing.py  accept_language.py  api_version_header.py  audit.py  authentication.py  bandwidth.py  basic_auth.py  bearer_auth.py  bot_detection.py  bulkhead.py  cache.py  chaos.py  circuit_breaker.py  client_hints.py  client_ip.py  conditional_request.py  content_negotiation.py  content_type.py  context.py  correlation.py  cors.py  cost_tracking.py  csp_report.py  csrf.py  data_masking.py  deprecation.py  early_hints.py  error_handler.py  etag.py  exception_handler.py  factory.py  feature_flag.py  geoip.py  graceful_shutdown.py  hateoas.py  header_transform.py  honeypot.py  https_redirect.py  idempotency.py  (+56 more)
src/fast_middleware/: __init__.py  constants.py
src/fast_middleware/mw_core/: __init__.py  body_limit.py  client_ip.py  compression.py  factory.py  logging.py  request_id.py
src/fast_middleware/operations/: ab_testing.py  accept_language.py  api_version_header.py  audit.py  bandwidth.py  bot_detection.py  build_version.py  bulkhead.py  cache.py  chaos.py  circuit_breaker.py  client_hints.py  conditional_request.py  content_negotiation.py  content_type.py  context.py  correlation.py  cost_tracking.py  data_masking.py  deprecation.py  dns_prefetch_control.py  early_hints.py  edge_performance_tiers.py  error_handler.py  etag.py  exception_handler.py  feature_flag.py  geoip.py  graceful_shutdown.py  hateoas.py  header_transform.py  health.py  idempotency.py  immutable_static_cache.py  json_schema.py  load_shedding.py  locale.py  maintenance.py  method_override.py  metrics.py  (+34 more)
src/fast_middleware/sec/: authentication.py  basic_auth.py  bearer_auth.py  csp_report.py  csrf.py  honeypot.py  https_redirect.py  ip_filter.py  jwt_bearer_auth.py  origin.py  permissions_policy.py  referrer_policy.py  replay_prevention.py  request_signing.py  route_auth.py  sanitization.py  scope.py  security.py  security_headers.py  trusted_host.py  webhook.py
src/fastmiddleware/: __init__.py
src/fastmiddleware/mw_core/: client_ip.py  compression.py
src/fastmiddleware/operations/: ab_testing.py  audit.py  bot_detection.py  content_type.py  context.py  deprecation.py  error_handler.py  feature_flag.py  header_transform.py  immutable_static_cache.py  locale.py  metrics.py  payload_size.py  proxy.py  request_coalescing.py  request_fingerprint.py  request_id_propagation.py  request_sampler.py  response_cache.py  response_signature.py  response_time.py  session.py
src/fastmiddleware/sec/: honeypot.py  jwt_bearer_auth.py  request_signing.py  scope.py  security_headers.py
src/fastmvc_middleware/: __init__.py  compression.py  cors_preset.py
src/fastx_middleware/: __init__.py  constants.py  taxonomy.py
src/fastx_middleware/mw_core/: body_limit.py  client_ip.py  compression.py  factory.py  logging.py  request_id.py  timing.py
src/fastx_middleware/operations/: ab_testing.py  accept_language.py  api_version_header.py  audit.py  bandwidth.py  bot_detection.py  build_version.py  bulkhead.py  cache.py  chaos.py  circuit_breaker.py  client_hints.py  conditional_request.py  content_negotiation.py  content_type.py  context.py  correlation.py  cost_tracking.py  data_masking.py  deprecation.py  etag.py  (+53 more)
src/mw_core/: base.py  body_limit.py  cors.py  cors_preset.py  factory.py  logging.py  request_id.py  timing.py
src/operations/: __init__.py  ab_testing.py  accept_language.py  api_version_header.py  audit.py  bandwidth.py  bot_detection.py  build_version.py  bulkhead.py  cache.py  chaos.py  circuit_breaker.py  client_hints.py  conditional_request.py  content_negotiation.py  content_type.py  context.py  correlation.py  cost_tracking.py  data_masking.py  deprecation.py  dns_prefetch_control.py  early_hints.py  edge_performance_tiers.py  error_handler.py  etag.py  exception_handler.py  feature_flag.py  geoip.py  graceful_shutdown.py  hateoas.py  header_transform.py  health.py  idempotency.py  immutable_static_cache.py  json_schema.py  load_shedding.py  locale.py  maintenance.py  method_override.py  (+34 more)
src/sec/: __init__.py  authentication.py  basic_auth.py  bearer_auth.py  csp_report.py  csrf.py  honeypot.py  https_redirect.py  ip_filter.py  jwt_bearer_auth.py  origin.py  permissions_policy.py  referrer_policy.py  replay_prevention.py  request_signing.py  route_auth.py  sanitization.py  scope.py  security.py  security_headers.py  trusted_host.py  webhook.py
tests/: __init__.py  conftest.py  test_all_middlewares.py  test_authentication.py  test_body_limit.py  test_build_immutable_dns.py  test_cache.py  test_client_ip.py  test_compression.py  test_compression_preset.py  test_cors.py  test_cors_preset.py  test_coverage_boost.py  test_edge_cases.py  test_edge_performance_tiers.py  test_error_handler.py  test_health.py  test_idempotency.py  test_integration.py  test_jwt_bearer_auth.py  test_logging.py  test_maintenance.py  test_metrics.py  test_rate_limit.py  test_request_context.py  test_request_id.py  test_request_id_middleware.py  test_security.py  test_security_headers.py  test_timing.py  test_trusted_host.py
(+21 files in other folders)
