

[tool.coverage.run]
source = ["src"]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]


[tool.setuptools]
package-dir = { "fastmiddleware" = "src" }
packages = ["fastmiddleware"]

[tool.setuptools.package-data]
fastmiddleware = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-middleware"
version = "0.9.0"
description = "HTTP middleware utilities (request ID, security headers, timing, CORS/body/IP/compression) for FastMVC / Starlette apps."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.27.0",
    "fast-platform>=0.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/shregar1/fastmvc"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
# Only the lightweight ``fast_middleware`` tests (other files target the optional ``fastmiddleware`` package).
python_files = [
    "test_request_id_middleware.py",
    "test_security_headers.py",
    "test_timing.py",
    "test_cors_preset.py",
    "test_body_limit.py",
    "test_client_ip.py",
    "test_compression_preset.py",
    "test_jwt_bearer_auth.py",
]

