

[tool.coverage.run]
source = ["src"]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]


[tool.setuptools]
package-dir = { "" = "src" }
packages = ["fast_middleware", "fast_middleware.mw_core", "fast_middleware.sec", "fast_middleware.operations"]

[tool.setuptools.package-data]
fast_middleware = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastx-middleware"
version = "1.6.0"
description = "HTTP middleware utilities (request ID, security headers, timing, CORS/body/IP/compression) for FastMVC / Starlette apps."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    {name = "Shivansh Sengar", email = "sengarsinghshivansh@gmail.com"},
    {name = "Shreyansh Sengar", email = "sengarsinghshreyansh@gmail.com"},
]
keywords = ["fastapi", "middleware", "starlette", "security", "cors", "rate-limiting", "fastmvc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "starlette>=0.27.0",
    "fastx-platform>=1.6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/shregar1/fastmvc"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../fast_platform/src", "src"]
addopts = "-v --tb=short"
# Only the lightweight ``fast_middleware`` tests (other files target the optional ``fastmiddleware`` package).
python_files = [
    "test_request_id_middleware.py",
    "test_security_headers.py",
    "test_timing.py",
    "test_cors_preset.py",
    "test_body_limit.py",
    "test_client_ip.py",
    "test_compression_preset.py",
    "test_jwt_bearer_auth.py",
    "test_build_immutable_dns.py",
    "test_edge_performance_tiers.py",
]

