

[tool.coverage.run]
source = ["src"]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]


[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "fastmiddleware",
    "fastx_middleware",
    "fastx_middleware.mw_core",
    "fastx_middleware.sec",
    "fastx_middleware.operations",
]

[tool.setuptools.package-data]
fastx_middleware = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastx-middleware"
version = "1.7.0"
description = "HTTP middleware utilities (request ID, security headers, timing, CORS/body/IP/compression) for FastMVC / Starlette apps."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    {name = "Shivansh Sengar", email = "sengarsinghshivansh@gmail.com"},
    {name = "Shreyansh Sengar", email = "sengarsinghshreyansh@gmail.com"},
]
keywords = ["fastapi", "middleware", "starlette", "security", "cors", "rate-limiting", "fastmvc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "starlette>=0.27.0",
    "fastx-platform>=1.6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/shregar1/fastmvc"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../fastx_platform/src", "src"]
addopts = "-v --tb=short"

